--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # node dependencies
-./node_modules
-./auth.json
-./package-lock.json
-./package.json
+/node_modules
+/auth.json
+/package-lock.json
+/package.json
 
 
-# json file
-./database/userData.json
+# user file
+/database/userData.json
