--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Krab borg ala Spongebob",
   "main": "krab_borg.js",
   "author": "Cody-Joe Abe",
+  "scripts": {
+    "start": "node ./krab_borg.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+  },
   "dependencies": {
     "discord.io": "github:woor/discord.io#gateway_v6",
     "node-fetch": "^2.2.0",
